<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/common/assets/res/any/strings.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>
    <!-- Common strings -->
    <string name="app_label">Evervolv Toolbox</string>
    <string name="toast_reboot_required">Setting requires a reboot!</string>

    <!-- New Settings strings added for Evervolv Customization -->
    <string name="custom_settings">Customizable Settings</string>
    <string name="button_creo_settings">Creo Settings</string>
    <string name="button_lockscreen_settings">Lockscreen settings</string>
    <string name="button_interface_settings">Interface settings</string>
    <string name="button_advanced_settings">Advanced settings</string>
    <string name="button_under_dev">Under development</string>

    <!-- Lockscreen Preferences -->
    <string name="preferences_lockscreen">Lockscreen Settings</string>
    <string name="preferences_lockscreen_summary">Customize your lockscreen</string>
    <string name="title_lockscreen_category_general">General lockscreen settings</string>
    <string name="title_lockscreen_category_lockscreen_style">Lockscreen style settings</string>

	<!-- Carrier caption -->
    <string name="title_carrier_caption">Lockscreen Carrier Caption</string>
    <string name="summary_carrier_caption">Change the lockscreen carrier caption</string>
	<!-- Lockscreen style -->
    <string name="title_general_lockscreen_style">Lockscreen style</string>
    <string name="dialog_title_lockscreen_style">Lockscreen style</string>
    <string name="summary_lockscreen_style">Select the lockscreen style to use</string>

    <string name="title_general_lockscreen_ring_location">Ring location</string>
    <string name="dialog_title_lockscreen_ring_location">Ring location</string>
    <string name="summary_lockscreen_ring_location">Select the location to draw the unlock ring.</string>

    <string name="pref_lockscreen_custom_app_toggle_title">Custom app starter</string>
    <string name="pref_lockscreen_custom_app_toggle_summary">Shows a second slider on sliding style, shows a custom app dimple on rotary style, shows a third ring on ring style</string>
    <string name="pref_lockscreen_custom_app_activity_title">Custom application</string>
    <string name="pref_lockscreen_ring_custom_apps_dialog_title_set">Select which shortcut to set</string>
    <string name="pref_lockscreen_ring_custom_apps_dialog_title_unset">Select which shortcut to un-set</string>
    <string name="pref_lockscreen_ring_custom_apps_dialog_cancel">Cancel</string>
    <string name="pref_lockscreen_ring_custom_apps_dialog_add">Add</string>
    <string name="pref_lockscreen_ring_custom_apps_dialog_remove">Remove</string>
    <string name="pref_lockscreen_ring_custom_apps_notset">Not Set</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>


	<!-- Trackball unlock -->
    <string name="title_trackball_unlock">Trackball unlock</string>
    <string name="summary_on_trackball_unlock">Trackball unlock will be used</string>
    <string name="summary_off_trackball_unlock">Trackball unlock will not be used</string>

        <!-- Volume button music controls -->
    <string name="pref_volbtn_music_controls_title">Volume button music controls</string>
    <string name="pref_volbtn_music_controls_summary">Seek music tracks when long-pressing the volume buttons while screen off</string>

    <!-- Interface Preferences -->
    <string name="preferences_interface">Interface settings</string>
    <string name="preferences_interface_summary">Customize your Ui</string>

    <string name="interface_category_general_title">General</string>
    <string name="interface_category_statusbar_title">Statusbar</string>
    <string name="interface_category_statusbar_icons_title">Statusbar icons</string>


	<!-- Screen on animation -->
    <string name="title_use_screenon_anim">Use Screen On Animation?</string>
    <string name="summary_on_use_screenon_anim">Screen On Animation will be used</string>
    <string name="summary_off_use_screenon_anim">Screen On Animation will not be used</string>
	<!-- Screen off animation -->
    <string name="title_use_screenoff_anim">Use Screen Off Animation?</string>
    <string name="summary_on_use_screenoff_anim">Screen Off Animation will be used</string>
    <string name="summary_off_use_screenoff_anim">Screen Off Animation will not be used</string>
	<!-- Trackball wake -->
    <string name="title_use_trackball_wake">Trackball wake</string>
    <string name="summary_on_use_trackball_wake">Trackball wake will be used</string>
    <string name="summary_off_use_trackball_wake">Trackball wake will not be used</string>
	<!-- Batter Options -->
    <string name="dialog_title_battery_style">Battery</string>
    <string name="title_battery_style">Battery style</string>
    <string name="summary_battery_style">Choose the battery style to use (Requires reboot)</string>
	<!-- Show/Hide clock -->
    <string name="clock_title">Clock</string>
    <string name="title_show_clock">Show clock</string>
    <string name="title_hide_clock">Hide the clock</string>
    <string name="summary_on_hide_clock"> Clock is hidden</string>
    <string name="summary_off_hide_clock"> Clock is visible</string>
	<!-- Show/Hide AM/PM -->
    <string name="title_hide_ampm">Hide AM/PM in clock</string>
    <string name="summary_on_hide_ampm"> AM/PM is hidden</string>
    <string name="summary_off_hide_ampm"> AM/PM is visible</string>
	<!-- Statusbar Transparency (expanded view) -->
    <string name="title_use_transparent_statusbar">Statusbar transparency</string>
    <string name="summary_on_use_transparent_statusbar">Transparent statusbar will be used</string>
    <string name="summary_off_use_transparent_statusbar">Transparent statusbar will not be used</string>

	<!-- Show/Hide data icon -->
    <string name="title_hide_data_icon">Hide data icon</string>
    <string name="summary_on_hide_data_icon">Data icon is set to hidden</string>
    <string name="summary_off_hide_data_icon">Data icon is set to visible</string>
	<!-- Show/Hide bluetooth icon -->
    <string name="title_hide_bluetooth_icon">Hide bluetooth icon</string>
    <string name="summary_on_hide_bluetooth_icon">Bluetooth icon is set to hidden</string>
    <string name="summary_off_hide_bluetooth_icon">Bluetooth icon is set to visible</string>
	<!-- Show/Hide battery icon -->
    <string name="title_hide_battery_icon">Hide battery icon</string>
    <string name="summary_on_hide_battery_icon">Battery icon is set to hidden</string>
    <string name="summary_off_hide_battery_icon">Battery icon is set to visible</string>
	<!-- Show/Hide sync icon -->
    <string name="title_hide_sync_icon">Hide sync icon</string>
    <string name="summary_on_hide_sync_icon">Sync icon is set to hidden</string>
    <string name="summary_off_hide_sync_icon">Sync icon is set to visible</string>
	<!-- Show/Hide gps icon -->
    <string name="title_hide_gps_icon">Hide GPS icon</string>
    <string name="summary_on_hide_gps_icon">GPS icon is set to hidden</string>
    <string name="summary_off_hide_gps_icon">GPS icon is set to visible</string>
	<!-- Show/Hide wifi icon -->
    <string name="title_hide_wifi_icon">Hide wifi icon</string>
    <string name="summary_on_hide_wifi_icon">Wifi icon is set to hidden</string>
    <string name="summary_off_hide_wifi_icon">Wifi icon is set to visible</string>
	<!-- Show/Hide signal icon -->
    <string name="title_hide_signal_icon">Hide signal icon</string>
    <string name="summary_on_hide_signal_icon">Signal icon is set to hidden</string>
    <string name="summary_off_hide_signal_icon">Signal icon is set to visible</string>
	<!-- Clear icon flags -->
    <string name="title_clear_flags_pref">Clear status bar icon flags</string>
    <string name="summary_clear_flags_pref">Clears all status bar icon flags from settings.</string>

    <!-- Advanced Preferences -->
    <string name="preferences_advanced">Advanced settings</string>
    <string name="preferences_advanced_summary">Advanced settings to customize your device.</string>
    <string name="advanced_category_general_title">General</string>
	<!-- Automatic Tethering -->
    <string name="title_tether_on_plugin">Tether device automatically when plugged in?</string>
    <string name="summary_on_tether_on_plugin">Your device will automatically tether when plugged in</string>
    <string name="summary_off_tether_on_plugin">Your device will not automatically tether when plugged in</string>

</resources>
