<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/custom_settings">

        <PreferenceScreen android:key="preferences_lockscreen"
                android:title="@string/preferences_lockscreen" 
                android:summary="@string/preferences_lockscreen_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.evervolv.EVParts"
                    android:targetClass="com.evervolv.EVParts.Preferences.LockscreenPrefs" />
        </PreferenceScreen>
        
        <PreferenceScreen android:key="preferences_launcher"
                android:title="@string/preferences_launcher" 
                android:summary="@string/preferences_launcher_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.evervolv.EVParts"
                    android:targetClass="com.evervolv.EVParts.Preferences.LauncherPrefs" />
        </PreferenceScreen>

        <PreferenceScreen android:key="preferences_interface"
                android:title="@string/preferences_interface" 
                android:summary="@string/preferences_interface_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.evervolv.EVParts"
                    android:targetClass="com.evervolv.EVParts.Preferences.InterfacePrefs" />
        </PreferenceScreen>

    </PreferenceCategory>
         
</PreferenceScreen>
